fix: load flicker

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -99,8 +99,8 @@
   .wrapper-main-task-btn-addTask_page {
     padding-right: 60%;
   }
-  .privacy-policy{
-    max-width: 70%;
+  .privacy-policy .legal-notice .help{
+    max-width: 30%;
   }
 }
 
